# arkanjo

./: .gitignore  CMakeLists.txt  README.md  config.json
cmake/: Libgit2.cmake  Targets.cmake
docs/: llm-detection.md  similarity.md
include/arkanjo/base/: similarity_table.hpp
include/arkanjo/formatter/: format_manager.hpp
include/arkanjo/methods/ast/: ast_method.hpp
include/arkanjo/methods/llm/: llm_method.hpp
include/arkanjo/parser/: tree_sitter_parser.hpp
src/: orchestrator_commands.hpp
src/base/: similarity_table.cpp
src/commands/big_clone/: big_clone_tailor_evaluator.cpp
src/commands/explorer/: similarity_explorer.cpp  similarity_explorer.hpp  similarity_explorer_entry.hpp
src/commands/git/: git_diff_function.cpp  git_diff_function.hpp
src/commands/rand/: random_selector.cpp  random_selector.hpp
src/methods/ast/: ast_method.cpp
src/methods/llm/: llm_method.cpp
src/parser/: tree_sitter_parser.cpp
